--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "axios": "^1.5.1"
+    "axios": "^1.5.1",
+    "discord.js": "^14.13.0"
   },
   "name": "league-of-legends-level-checker",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
